# mpispawn

./: .pre-commit-config.yaml  pyproject.toml  readme.md
mpispawn/: dummy.py  main.py  wrapper.py
