[project]
name = "mpispawn"
version = "0.1"
description = "A tool for spawning multiple simultaneous MPI tasks"
readme = "readme.md"
authors = [
  {name = "Jack Betteridge", email = "J.Betteridge@imperial.ac.uk"},
]
maintainers = [
  {name = "Jack Betteridge", email = "J.Betteridge@imperial.ac.uk"},
]
dependencies = [
  "mpi4py",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python"
]

[project.scripts]
mpispawn = "mpispawn:main.main"

[project.urls]
Repository = "https://github.com/JDBetteridge/mpispawn"

[project.optional-dependencies]
dev = [
    "ruff",
    "pre-commit",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 80
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E226"]

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true
